# yuri

./: .coderabbit.yml  .env.example  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  btca.config.jsonc  build.rs  cbindgen.toml  tealr_doc_gen_config.json
c_deps/: yuri.h
c_src/: board_db.h  char_login.c  char_map.c  char_server.c  clan_db.h  class_db.c  class_db.h  config.c  config.h  core.c  creation_db.c  creation_db.h  gm_command.c  gm_command.h  item_db.h  login_char.c  login_parse.c  login_server.c  magic_db.h  map_char.c  map_char.h  map_parse.c  map_parse.h  map_server.c  map_server.h  map_server_stubs.c  metan_cli.c  mob.c  mob.h  net_crypt.c  net_crypt.h  npc.c  npc.h  pc.c  pc.h  recipe_db.h  rust_shims.c  rust_shims_map.c  scripting.c  scripting.h  (+3 more)
conf/: server.yaml
migrations_sqlx/: 202602121500001_01_2020-07-04-14-47_CreateTables.sql  202602121500002_02_2020-07-04-15-04_FixErrors.sql  202602121500003_03_2020-07-04-15-21_ReduceMobVitaAndExp.sql  202602121500006_06_2020-07-15-21-20_FixRoosterGuardianSpawnTime.sql  202602121500007_07_2020-07-16-11-11_FixKeyToPondIcon.sql  202602121500009_09_2020-08-31-20-57_CreateKanPaymentsTable.sql  202602121500014_14_2020-10-01-12-55_RebalanceHandItems.sql  202602121500017_17_2020-10-07-21-21_UpdateItems.sql  202602121500018_18_2020-10-12-09-29_InsertWaypointNpcs.sql  202602121500019_19_2020-10-19-10-01_DuplicateHorseSentries.sql  202602121500020_20_2020-10-24-07-41_InsertMagisBanePoet.sql  202602121500021_21_CreateKanDonationsTable.sql  202602121500022_22_bcrypt_migration.sql
src/: config.rs  config_globals.rs  core.rs  lib.rs  main.rs  session.rs  timer.rs  world.rs
src/common/: constants.rs  entity_manager.rs  mod.rs  traits.rs  types.rs
src/common/player/: appearance.rs  bridge.rs  combat.rs  identity.rs  inventory.rs  legends.rs  mod.rs  progression.rs  registries.rs  social.rs  spells.rs
src/database/: board_db.rs  boards.rs  character.rs  clan_db.rs  class_db.rs  item_db.rs  magic_db.rs  map_db.rs  mob_db.rs  mod.rs  recipe_db.rs
src/engine/: config.rs  game_loop.rs  lifecycle.rs  mod.rs  world.rs
src/engine/session/: buffer.rs  io.rs  mod.rs
src/ffi/: block.rs  board_db.rs  clan_db.rs  class_db.rs  config.rs  config_globals.rs  core.rs  crypt.rs  database.rs  item_db.rs  magic_db.rs  map_char.rs  map_db.rs  mob.rs  mob_db.rs  mod.rs  npc.rs  recipe_db.rs  scripting.rs  session.rs  timer.rs
src/game/: block.rs  block_grid.rs  boards.rs  gm_command.rs  lifecycle.rs  map_char.rs  map_server.rs  mob.rs  mod.rs  npc.rs  pc.rs  time_util.rs  types.rs  util.rs
src/game/client/: handlers.rs  mod.rs  visual.rs
src/game/lua/: coroutine.rs  dispatch.rs  error.rs  macros.rs  mod.rs
src/game/lua/entity/: item.rs  mob.rs  mod.rs  npc.rs  player.rs  shared.rs  types.rs
src/game/lua/entity/item/: mod.rs
src/game/lua/entity/mob/: fields.rs  mod.rs
src/game/lua/entity/npc/: mod.rs
src/game/lua/entity/npc/methods/: add_npc.rs  mod.rs
src/game/lua/entity/player/: fields.rs  mod.rs
src/game/lua/entity/shared/: mod.rs  queries.rs  spawn.rs
src/game/lua/globals/: broadcast.rs  constants.rs  map_dimensions.rs  map_properties.rs  map_tiles.rs  map_warps.rs  mod.rs  stubs.rs  time.rs
src/game/lua/registry/: game_registry.rs  mod.rs
src/game/map_parse/: chat.rs  combat.rs  dialogs.rs  events.rs  groups.rs  items.rs  mod.rs  movement.rs  packet.rs  player_state.rs  trading.rs  visual.rs
src/game/mob/: combat.rs  entity.rs  init.rs  items.rs  mod.rs  spatial.rs  systems.rs
src/game/npc/: entity.rs  init.rs  mod.rs  spatial.rs  systems.rs
src/game/player/: entity.rs  mod.rs  spatial.rs  systems.rs  types.rs
src/game/scripting/: async_coro.rs  ffi.rs  globals.rs  map_globals.rs  mod.rs  object_collect.rs  pc_accessors.rs  pending.rs  thread_registry.rs
src/game/scripting/types/: floor.rs  item.rs  mob.rs  mod.rs  npc.rs  pc.rs  registry.rs  shared.rs
src/game/state/: cron.rs  game_registry.rs  game_time.rs  lang.rs  mod.rs  party.rs
src/game/world/: block.rs  block_grid.rs  entity_store.rs  floor_items.rs  mod.rs  object_flags.rs
src/network/: acl.rs  crypt.rs  ddos.rs  globals.rs  mod.rs  throttle.rs
src/servers/: mod.rs
src/servers/char/: charstatus.rs  db.rs  login.rs  map.rs  mod.rs  packet.rs
src/servers/login/: client.rs  db.rs  interserver.rs  meta.rs  mod.rs  packet.rs
src/servers/map/: char.rs  mod.rs  packet.rs
tests/: login_server_integration.rs
