[package]
name = "yuri"
version = "0.1.0"
authors = ["Steve Corona"]
edition = "2018"

[lib]
crate-type = ["staticlib"] 

[dependencies]
toml = "0.9.8"
md-5 = "0.10.6"
hex = "0.4.3"
libc = "0.2.181"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# For database migrations
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.5"