[package]
name = "yuri"
version = "0.1.0"
authors = ["Steve Corona"]
edition = "2021"
rust-version = "1.93"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
toml = "0.9.8"
rand = "0.10.0"
flate2 = "1"
bytes = "1"
md-5 = "0.10.6"
hex = "0.4.3"
bcrypt = "0.18"
chrono = "0.4.44"
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2.182"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
anyhow = "1.0.102"
thiserror = "2.0.18"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For database migrations
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }

[features]
# Includes NPC/block game logic that depends on libmap_game.a C symbols.
# Only enable when building the map_server binary.
map-game = []

[dev-dependencies]
criterion = "0.8.2"

[[bin]]
name = "login_server"
path = "src/bin/login_server.rs"

[[bin]]
name = "char_server"
path = "src/bin/char_server.rs"

[[bin]]
name = "map_server"
path = "src/bin/map_server.rs"
required-features = ["map-game"]