[package]
name = "yuri"
version = "0.1.0"
authors = ["Steve Corona"]
edition = "2021"
rust-version = "1.93"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
dotenvy = "0.15"
toml = "0.9.8"
rand = "0.10.0"
flate2 = "1"
bytes = "1"
md-5 = "0.10.6"
hex = "0.4.3"
bcrypt = "0.18"
chrono = "0.4.44"
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2.182"
mlua = { version = "0.11.6", features = ["luajit", "async"] }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde-big-array = "0.5"
serde_yaml = "0.9.34-deprecated"
anyhow = "1.0.102"
thiserror = "2.0.18"
rayon = "1"
dashmap = "6"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For database migrations
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
socket2 = "0.6"

[dev-dependencies]
criterion = "0.8.2"

[[bin]]
name = "decrypt_cli"
path = "src/bin/decrypt_cli.rs"

[[bin]]
name = "metan_cli"
path = "src/bin/metan_cli.rs"

[[bin]]
name = "world_server"
path = "src/bin/world_server.rs"